--- a/force-app/main/default/classes/VisitLogQueueable.cls
+++ b/force-app/main/default/classes/VisitLogQueueable.cls
@@ -1,5 +1,4 @@
 public class VisitLogQueueable implements Queueable {
-
     private List<Id> visitLogIds;
 
     public VisitLogQueueable(List<Id> visitLogIds) {
@@ -8,13 +7,9 @@ public class VisitLogQueueable implements Queueable {
 
     public void execute(QueueableContext context) {
         List<Visit_Log__c> visits = [
-            SELECT Id, Route__c, Status__c, Visit_Location__c 
-            FROM Visit_Log__c WHERE Id IN :visitLogIds
+            SELECT Id, Route__c, Status__c, Visit_Location__c FROM Visit_Log__c WHERE Id IN :visitLogIds
         ];
-
         VisitLogService.checkLocationForAlerts(visits, null);
-
-        // Optionally chain additional queueable jobs here
-        // System.enqueueJob(new AnotherQueueableJob());
+        // Optionally chain more jobs here
     }
 }
