--- a/force-app/main/default/classes/VisitLogServiceTest.cls
+++ b/force-app/main/default/classes/VisitLogServiceTest.cls
@@ -1,50 +1,48 @@
 @isTest
 private class VisitLogServiceTest {
-
-    @isTest
-    static void testUnauthorizedDumpAlert() {
-        Zone__c testZone = new Zone__c(
-            Name = 'Test Zone 1',
-            Center_Lat__c = 10.0,
-            Center_Long__c = 10.0
+    private static User createTestSupervisor() {
+        Profile p = [SELECT Id FROM Profile WHERE Name = 'Standard User' LIMIT 1];
+        User u = new User(
+            FirstName = 'Test',
+            LastName = 'Supervisor',
+            Alias = 'tsup',
+            Email = 'testsupervisor' + DateTime.now().getTime() + '@example.com',
+            Username = 'testsupervisor' + DateTime.now().getTime() + '@example.com',
+            ProfileId = p.Id,
+            TimeZoneSidKey = 'Asia/Kolkata',
+            LocaleSidKey = 'en_IN',
+            EmailEncodingKey = 'UTF-8',
+            LanguageLocaleKey = 'en_US'
         );
-        insert testZone;
-
-        Route__c testRoute = new Route__c(
-            Name = 'Test Route 1',
-            Assigned_Zone__c = testZone.Id
-        );
-        insert testRoute;
-
-        VisitLogService.disableGeoCheck = true; // Disable geo checks in test
-
-        Visit_Log__c unauthorizedVisit = new Visit_Log__c();
-        unauthorizedVisit.Route__c = testRoute.Id;
-        // DO NOT assign Visit_Location__c here to avoid error
-        insert unauthorizedVisit;
-
-        // No assertion on Unauthorized Dump alert here
+        insert u;
+        return u;
     }
 
     @isTest
     static void testMissedPickupAlert() {
-        Route__c testRoute = new Route__c(Name = 'Test Route 2');
-        insert testRoute;
+        User supervisor = createTestSupervisor();
 
-        Visit_Log__c pendingVisit = new Visit_Log__c(
-            Route__c = testRoute.Id,
-            Status__c = 'Pending'
+        Zone__c zone = new Zone__c(Name = 'ZoneTest', Supervisor__c = supervisor.Id);
+        insert zone;
+
+        Route__c route = new Route__c(Name = 'RouteTest', Assigned_Zone__c = zone.Id);
+        insert route;
+
+        Visit_Log__c log = new Visit_Log__c(
+            Route__c = route.Id,
+            Zone__c = zone.Id,
+            Status__c = 'Pending',
+            Visit_Location__Latitude__s = 10.0,
+            Visit_Location__Longitude__s = 10.0
         );
-        insert pendingVisit;
-
-        VisitLogService.disableGeoCheck = true; // Disable geo checks in test
+        insert log;
 
         Test.startTest();
-        pendingVisit.Status__c = 'Missed';
-        update pendingVisit;
+        log.Status__c = 'Missed';
+        update log;
         Test.stopTest();
 
-        List<Alert__c> alerts = [SELECT Id, Alert_Type__c FROM Alert__c WHERE Route__c = :testRoute.Id];
+        List<Alert__c> alerts = [SELECT Id, Alert_Type__c FROM Alert__c WHERE Route__c = :route.Id];
         System.assertEquals(1, alerts.size());
         System.assertEquals('Missed Pickup', alerts[0].Alert_Type__c);
     }
