--- a/force-app/main/default/classes/VisitLogBatchTest.cls
+++ b/force-app/main/default/classes/VisitLogBatchTest.cls
@@ -2,25 +2,24 @@
 public class VisitLogBatchTest {
     @isTest
     static void testBatchExecution() {
-        // Setup test Route record
-        Route__c testRoute = new Route__c(Name = 'Test Route');
-        insert testRoute;
-        
-        // Insert Visit_Log__c records without Visit_Location__c
-        List<Visit_Log__c> visits = new List<Visit_Log__c>();
-        for (Integer i = 0; i < 3; i++) {
-            visits.add(new Visit_Log__c(
-                Route__c = testRoute.Id,
-                Status__c = 'Pending'
-            ));
-        }
-        insert visits;
-        
+
+        Route__c route = new Route__c(
+            Name = 'Test Route', 
+            Status__c = 'Active'
+        );
+        insert route;
+
+        Visit_Log__c log1 = new Visit_Log__c(
+            Route__c = route.Id, 
+            Status__c = 'Pending'
+        );
+        insert log1;
+
         Test.startTest();
             VisitLogBatch batch = new VisitLogBatch();
             Database.executeBatch(batch);
         Test.stopTest();
 
-        System.assert(true); // Test passed if no exception
+        System.assert(true);
     }
 }
